--- a/donate.html
+++ b/donate.html
@@ -26,45 +26,66 @@
 
     <main>
         <section class="content-section">
-            <h2>You Have the Power to Transform a Generation</h2>
-            <p>Whether you give, partner, or volunteer, your support is the root of the change.</p>
+            <h2>Be the Root of the Change.</h2>
+            <p>You have the power to transform a generation. Whether you give, partner, or volunteer, your support is the root of all our work.</p>
         </section>
 
         <section class="content-section">
-            <h3>Donate</h3>
-            <p>Your gift has an immediate impact. It buys a sewing machine, pays for a legal consultation, or funds a training manual. Change a life today.</p>
-            <div class="hero-buttons">
-                <a href="#" class="cta-primary">DONATE MONTHLY</a>
-                <a href="#" class="cta-secondary">GIVE A ONE-TIME GIFT</a>
+            <h3>Your Gift Has a Direct Impact.</h3>
+            <p>We are 100% transparent. Your donation goes directly to the front lines.</p>
+            
+            <div class="impact-guide">
+                <div class="impact-item">
+                    <span class="impact-amount">150,000 UGX</span>
+                    <span class="impact-description">= 1 MomPreneur Startup Kit (Sewing machine, tools, etc.)</span>
+                </div>
+                <div class="impact-item">
+                    <span class="impact-amount">50,000 UGX</span>
+                    <span class="impact-description">= 1 Youth for a "Smart Choices" Workshop (Manuals, lunch, facilitation)</span>
+                </div>
+                <div class="impact-item">
+                    <span class="impact-amount">25,000 UGX</span>
+                    <span class="impact-description">= 1 Hour of Pro-Bono Legal Aid for a mother at our Hub</span>
+                </div>
+                <div class="impact-item">
+                    <span class="impact-amount">10,000 UGX</span>
+                    <span class="impact-description">= 1 "Men Matter" Training Handbook</span>
+                </div>
             </div>
-            <p style="margin-top: 2rem;">Or, fund a specific need:</p>
-            <div class="cta-options">
-                <div class="cta-option">
-                    <h4>Fund a Startup Kit</h4>
-                    <p>150,000 UGX provides a sewing machine, fabrics, and business training to launch a MomPreneur's tailoring business.</p>
-                </div>
-                <div class="cta-option">
-                    <h4>Sponsor a Workshop</h4>
-                    <p>50,000 UGX empowers young people with essential life skills through a full day of "Men Matter" or "Smart Choices" training.</p>
-                </div>
-                <div class="cta-option">
-                    <h4>"Adopt-a-Hub" (Full Setup)</h4>
-                    <p>1,000,000 UGX provides essential resources and support to run a community hub for a month.</p>
-                </div>
+
+            <div class="donation-form-embed">
+                <!-- Donation Form Embed (With options for One-Time and Monthly giving) -->
+                <p><em>[Donation Form Placeholder]</em></p>
             </div>
         </section>
 
-        <section class="content-section">
-            <h3>Partner With Us (CSR & NGOs)</h3>
-            <p>Are you a corporate, NGO, or government partner? We can't do this alone. We are seeking partners for CSR initiatives, bulk 'Roots Made' orders, and sub-contracting our proven training modules.</p>
-            <a href="mailto:partners@rootsoresponsibility.org" class="cta-secondary">EMAIL OUR PARTNERSHIP TEAM</a>
-        </section>
-
-        <section class="content-section">
-            <h3>Volunteer</h3>
-            <p>Have a skill you'd like to share? We are always looking for volunteer mentors (in business, law, or tech), guest trainers for our workshops, and professional counselors.</p>
-            <a href="contact.html" class="cta-secondary">FILL OUT OUR VOLUNTEER FORM</a>
-        </section>
+        <div class="get-involved-grid">
+            <section class="content-section">
+                <h3>Let's Amplify Our Impact Together</h3>
+                <p>Are you a corporation, NGO, or government agency? We are stronger together.</p>
+                <h4>Ways to Partner:</h4>
+                <ul class="ways-to-help-list">
+                    <li><strong>Sponsor a Cohort:</strong> Fund an entire 12-week MomPreneur Academy.</li>
+                    <li><strong>Corporate Gifting:</strong> Place a bulk order of 'Roots Made' products for your clients or employees.</li>
+                    <li><strong>Employee Engagement:</strong> Fundraise, or host a volunteer day for your team to mentor our MomPreneurs.</li>
+                    <li><strong>Program Partnership:</strong> Sub-contract us to deliver our proven "Men Matter" or "Smart Choices" curriculum.</li>
+                </ul>
+                <a href="mailto:partners@rootsoresponsibility.org" class="cta-secondary">EMAIL OUR PARTNERSHIP TEAM</a>
+            </section>
+    
+            <section class="content-section">
+                <h3>Give the Gift of Your Expertise</h3>
+                <p>We are always looking for skilled professionals to help us grow.</p>
+                <h4>We are currently seeking:</h4>
+                <ul class="ways-to-help-list">
+                    <li><strong>Business Mentors:</strong> (To guide our MomPreneurs)</li>
+                    <li><strong>Legal Professionals:</strong> (For our Support Hub clinics)</li>
+                    <li><strong>Counselors & Therapists:</strong> (For our wellness programs)</li>
+                    <li><strong>Photographers/Videographers:</strong> (To help tell our story)</li>
+                </ul>
+                <a href="contact.html" class="cta-secondary">FILL OUT OUR VOLUNTEER FORM</a>
+            </section>
+        </div>
     </main>
 
     <footer>
