--- a/get-help.html
+++ b/get-help.html
@@ -31,6 +31,24 @@
         </section>
 
         <section class="content-section">
+            <h3>Our Promise to You:</h3>
+            <div class="pillars-grid">
+                <div class="pillar">
+                    <h4>It is Confidential</h4>
+                    <p>Your story is yours. We will never share it.</p>
+                </div>
+                <div class="pillar">
+                    <h4>It is Respectful</h4>
+                    <p>We see you, we respect you, and we are here to help, not to judge.</p>
+                </div>
+                <div class="pillar">
+                    <h4>It is a Hand Up</h4>
+                    <p>Our goal is to help you build your own strength.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="content-section">
             <h3>How to Contact Us (Choose the easiest way for you):</h3>
             <div class="contact-methods">
                 <div class="contact-method">
@@ -66,10 +84,32 @@
                 <div class="contact-method">
                     <h4>3. Visit Our Hub</h4>
                     <p>You can walk in and talk to someone in person. We are a safe space.</p>
-                    <p><strong>Address:</strong> 123 Main Street, Bukedi, Uganda (Example)<br><strong>Hours:</strong> Monday - Friday, 9am - 5pm</p>
+                    <p><strong>Address:</strong> 123 Main Street, Bukedi, Uganda (Example)<br><strong>Hours:</strong> Monday - Friday, 9am - 5pm (We have a private room for you to talk)</p>
                     <div class="map-embed">
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3989.7576999999995!2d33.94!3d0.51!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMMKwMzAnMzYuMCJOIDMzwrA1NicwMC4wIkU!5e0!3m2!1sen!2sus!4v1620000000000!5m2!1sen!2sus" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" title="Google Map of our location"></iframe>
                     </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="content-section">
+            <h3>Frequently Asked Questions (FAQs for Beneficiaries)</h3>
+            <div class="faq-container">
+                <div class="faq-item">
+                    <h4>Is this really free?</h4>
+                    <p>Yes. Our Support Hub services (counseling, legal aid, daycare) and our "Smart Choices" / "Men Matter" workshops are completely free. The MomPreneur Academy is also free for those who are selected.</p>
+                </div>
+                <div class="faq-item">
+                    <h4>Am I qualified for the MomPreneur Academy?</h4>
+                    <p>We are looking for commitment, not experience. If you are a single mother or at-risk woman with a strong desire to build a business, we want you to apply.</p>
+                </div>
+                <div class="faq-item">
+                    <h4>Will anyone find out I came here?</h4>
+                    <p>No. Your privacy is our number one priority. We will not tell your family, friends, or community.</p>
+                </div>
+                <div class="faq-item">
+                    <h4>What if I don't live nearby?</h4>
+                    <p>Please contact us anyway. We may have partner organizations in your area we can connect you with.</p>
                 </div>
             </div>
         </section>
