--- a/index.html
+++ b/index.html
@@ -88,11 +88,22 @@
         <section id="enterprise" class="content-section">
             <h2>This is Not Just Charity. It's an Enterprise.</h2>
             <p>We are self-sustaining. Our 'Roots Made' brand features products and services from the mothers you support. 70% of all profits are reinvested.</p>
-            <div class="products-preview">
-                <!-- Placeholder for product images -->
-                <div class="product-image">Handmade Crafts</div>
-                <div class="product-image">Textile Products</div>
-                <div class="product-image">Digital Services</div>
+            <div class="product-grid">
+                <div class="product-item">
+                    <img src="https://via.placeholder.com/300x300.png?text=Beautiful+Bag" alt="Kitengi-Trimmed Laptop Bag">
+                    <h3>Kitengi-Trimmed Laptop Bag</h3>
+                    <p>A stylish and protective bag for your tech.</p>
+                </div>
+                <div class="product-item">
+                    <img src="https://via.placeholder.com/300x300.png?text=Hand-Woven+Basket" alt="Hand-Woven Basket">
+                    <h3>Hand-Woven Basket</h3>
+                    <p>Perfect for home storage or as a decorative piece.</p>
+                </div>
+                <div class="product-item">
+                    <img src="https://via.placeholder.com/300x300.png?text=Logo+Design" alt="Small Business Logo Design">
+                    <h3>Logo Design Service</h3>
+                    <p>Professional branding by our digital MomPreneurs.</p>
+                </div>
             </div>
             <a href="shop.html" class="cta-primary">SHOP 'ROOTS MADE'</a>
         </section>
@@ -117,6 +128,31 @@
                     <a href="donate.html" class="cta-primary">DONATE NOW</a>
                 </div>
             </div>
+        </section>
+
+        <!-- Volunteer Section -->
+        <section class="content-section">
+            <h2>Give the Gift of Your Expertise</h2>
+            <p>We are always looking for skilled professionals to help us grow. Your time and talent can make a world of difference.</p>
+            <div class="volunteer-grid">
+                <div class="volunteer-role">
+                    <h4>Business Mentors</h4>
+                    <p>Guide our MomPreneurs on their journey from idea to enterprise.</p>
+                </div>
+                <div class="volunteer-role">
+                    <h4>Legal Professionals</h4>
+                    <p>Provide vital pro-bono advice at our Support Hub clinics.</p>
+                </div>
+                <div class="volunteer-role">
+                    <h4>Counselors & Therapists</h4>
+                    <p>Support the mental health and wellness of the women we serve.</p>
+                </div>
+                <div class="volunteer-role">
+                    <h4>Photographers/Videographers</h4>
+                    <p>Help us capture and share the powerful stories of transformation.</p>
+                </div>
+            </div>
+            <a href="contact.html" class="cta-secondary">FILL OUT OUR VOLUNTEER FORM</a>
         </section>
     </main>
 
