--- a/shop.html
+++ b/shop.html
@@ -25,43 +25,68 @@
 
     <main>
         <section class="content-section">
-            <h2>Shop 'Roots Made': Purpose in Every Purchase</h2>
-            <p>100% of our products are made by graduates of the MomPreneur Academy. 70% of profits are reinvested into our programs, and 30% are paid directly to the mother as a fair wage.</p>
+            <h2>Our Brand Story</h2>
+            <p>'Roots Made' isn't just a brand; it's a promise. It's a promise that every product is made with skill, care, and purpose. It's a promise to our customers that their purchase creates real, sustainable change. And it's a promise to our mothers that their work has value, dignity, and a global platform.</p>
         </section>
 
         <section class="product-grid">
-            <div class="product-item">
-                <img src="https://via.placeholder.com/300x300.png?text=Hand-Woven+Basket" alt="Hand-Woven Basket">
-                <h3>Hand-Woven Basket</h3>
-                <p>40,000 UGX</p>
-                <p>Beautiful, durable baskets perfect for storage or decor.</p>
+            <!-- Featured Product -->
+            <div class="featured-product-card">
+                <img src="https://via.placeholder.com/400x400.png?text=Beautiful+Bag" alt="Kitengi-Trimmed Laptop Bag">
+                <h3>Kitengi-Trimmed Laptop Bag</h3>
+                <p class="product-price">75,000 UGX</p>
+                <p class="product-impact"><strong>Impact:</strong> "This purchase provides 1 day of safe childcare at our Support Hub."</p>
+                <a href="#" class="cta-primary">ADD TO CART</a>
             </div>
-            <div class="product-item">
-                <img src="https://via.placeholder.com/300x300.png?text=Kitengi-Trimmed+Bag" alt="Kitengi-Trimmed Bag">
-                <h3>Kitengi-Trimmed Bag</h3>
-                <p>60,000 UGX</p>
-                <p>Stylish bag featuring vibrant Kitengi fabric, ideal for everyday use.</p>
-            </div>
-            <div class="product-item">
-                <img src="https://via.placeholder.com/300x300.png?text=Digital+Design" alt="Digital Design Services">
-                <h3>Digital Design Services</h3>
-                <p>Inquire for Quote</p>
-                <p>Professional graphic design services for your business or event.</p>
-            </div>
-            <div class="product-item">
-                <img src="https://via.placeholder.com/300x300.png?text=Monthly+Box" alt="Roots Monthly Box">
-                <h3>'Roots' Monthly Box</h3>
-                <p>100,000 UGX / month</p>
-                <p>A curated box of unique crafts and goods delivered monthly.</p>
+            <!-- Featured Service -->
+            <div class="featured-product-card">
+                <img src="https://via.placeholder.com/400x400.png?text=Logo+Design" alt="Small Business Logo Design">
+                <h3>Small Business Logo Design</h3>
+                <p class="product-price">200,000 UGX</p>
+                <p class="product-impact"><strong>Impact:</strong> "This service, designed by a digital MomPreneur, sponsors a 'Men Matter' workshop."</p>
+                <a href="#" class="cta-secondary">REQUEST A QUOTE</a>
             </div>
         </section>
 
-        <section class="content-section featured-maker">
-            <img src="https://via.placeholder.com/150x150.png?text=Sarah" alt="Artisan Sarah">
-            <div>
-                <h3>Featured Maker Story</h3>
-                <p>"Meet Sarah, the artisan behind our textile line. A single mother of two, she used her MomPreneur training to launch a tailoring business that now supports her entire family."</p>
+        <section class="content-section">
+            <h2>More 'Roots Made' Products</h2>
+            <div class="product-grid">
+                <div class="product-item">
+                    <img src="https://via.placeholder.com/300x300.png?text=Hand-Woven+Basket" alt="Hand-Woven Basket">
+                    <h3>Hand-Woven Basket</h3>
+                    <p class="product-price">40,000 UGX</p>
+                    <p>Beautiful, durable baskets perfect for storage or decor.</p>
+                    <a href="#" class="cta-secondary">ADD TO CART</a>
+                </div>
+                <div class="product-item">
+                    <img src="https://via.placeholder.com/300x300.png?text=Face+Masks" alt="Kitengi Fabric Face Masks">
+                    <h3>Kitengi Fabric Face Masks (3-Pack)</h3>
+                    <p class="product-price">15,000 UGX</p>
+                    <p>Stylish and reusable masks made with vibrant local fabrics.</p>
+                    <a href="#" class="cta-secondary">ADD TO CART</a>
+                </div>
+                <div class="product-item">
+                    <img src="https://via.placeholder.com/300x300.png?text=Jewelry+Set" alt="Beaded Jewelry Set">
+                    <h3>Beaded Jewelry Set</h3>
+                    <p class="product-price">35,000 UGX</p>
+                    <p>Handcrafted necklace and earring set made by our artisans.</p>
+                    <a href="#" class="cta-secondary">ADD TO CART</a>
+                </div>
             </div>
+        </section>
+
+        <section class="content-section">
+            <h2>The Hands and Hearts Behind the Products</h2>
+            <div class="maker-photos-grid">
+                <img src="https://via.placeholder.com/300x300.png?text=Artisan+1" alt="Artisan at work">
+                <img src="https://via.placeholder.com/300x300.png?text=Artisan+2" alt="Artisan crafting a product">
+                <img src="https://via.placeholder.com/300x300.png?text=Artisan+3" alt="Artisan smiling">
+            </div>
+            <div class="featured-profile">
+                <h3>Featured Profile</h3>
+                <p>"Meet Beatrice. A single mother of two, she is the lead artisan for our textile line. Her skill with the sewing machine is unmatched, and the income she earns from 'Roots Made' is paying for her children's school fees and building her own home."</p>
+            </div>
+            <a href="#" class="cta-secondary">READ MORE MAKER STORIES</a>
         </section>
     </main>
 
