--- a/community-support-hubs.html
+++ b/community-support-hubs.html
@@ -20,24 +20,46 @@
         <div class="header-actions">
             <a href="get-help.html" class="cta-link">GET HELP</a>
             <a href="shop.html" class="cta-secondary">SHOP</a>
-            <a href="donate.html" class="cta-primary">DONATE</a>
+            <a href="get-involved.html" class="cta-primary">DONATE</a>
         </div>
     </header>
 
     <main>
-        <section class="content-section">
-            <h2>🏠 Community Support Hubs: A Foundation for Success</h2>
-            <p>A mother cannot build a business if her child is not safe. A woman cannot heal if she has no support. Our Support Hubs are the 'safe haven' that makes all our other work possible. These physical centers provide the practical, wrap-around support families need to thrive.</p>
-            
-            <h3>Services Offered:</h3>
-            <ul class="key-topics-list">
-                <li><strong>Subsidized Daycare:</strong> Safe, quality, affordable childcare so mothers can work and train.</li>
-                <li><strong>Legal Aid Clinics:</strong> Pro-bono legal advice for child support, land rights, and business registration.</li>
-                <li><strong>Counseling & Wellness:</strong> Confidential mental health support for trauma and stress.</li>
-                <li><strong>Health Referrals:</strong> Connections to local partner clinics for family planning and child health.</li>
-            </ul>
+        <!-- Hero Section -->
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1>🏠 Community Support Hubs</h1>
+                <p>Providing the safe haven and practical support that makes all our other work possible.</p>
+            </div>
+        </section>
 
-            <p>Our hubs run on community support. <a href="donate.html" class="cta-primary">Help us keep the doors open with a monthly gift.</a> These hubs provide a lifeline for families, ensuring they have the resources to thrive.</p>
+        <section class="content-section">
+            <h2>A Foundation for Success</h2>
+            <p>A mother cannot build a business if her child is not safe. A woman cannot heal if she has no support. Our Support Hubs are the 'safe haven' that makes all our other work possible. These physical centers provide the practical, wrap-around support families need to thrive.</p>
+        </section>
+
+        <section class="content-section">
+            <h3>Our Wrap-Around Services</h3>
+            <div class="pillars-grid">
+                <div class="pillar">
+                    <h4>Subsidized Daycare</h4>
+                    <p>Safe, quality, affordable childcare so mothers can work and train.</p>
+                </div>
+                <div class="pillar">
+                    <h4>Legal Aid Clinics</h4>
+                    <p>Pro-bono legal advice for child support, land rights, and business registration.</p>
+                </div>
+                <div class="pillar">
+                    <h4>Counseling & Wellness</h4>
+                    <p>Confidential mental health support for trauma and stress.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="content-section cta-section">
+            <h2>Keep Our Doors Open</h2>
+            <p>Our hubs run on community support and provide a lifeline for families. Help us keep this vital resource available.</p>
+            <a href="get-involved.html#donate" class="cta-primary">GIVE A MONTHLY GIFT</a>
         </section>
     </main>
 
