--- a/get-help.html
+++ b/get-help.html
@@ -20,7 +20,7 @@
         <div class="header-actions">
             <a href="get-help.html" class="cta-link">GET HELP</a>
             <a href="shop.html" class="cta-secondary">SHOP</a>
-            <a href="donate.html" class="cta-primary">DONATE</a>
+            <a href="get-involved.html" class="cta-primary">DONATE</a>
         </div>
     </header>
 
@@ -55,7 +55,7 @@
                     <h4>1. Send us a WhatsApp Message (Fastest Way)</h4>
                     <img src="https://via.placeholder.com/80/25D366/FFFFFF?text=WA" alt="WhatsApp Icon" class="whatsapp-icon">
                     <p>Click here to chat privately with our team:</p>
-                    <a href="https://wa.me/256123456789" target="_blank" class="cta-primary">START A WHATSAPP CHAT (+256 XXX XXXXXX)</a>
+                    <a href="https://wa.me/256772307861" target="_blank" class="cta-primary">START A WHATSAPP CHAT (+256 772 307861)</a>
                 </div>
 
                 <div class="contact-method">
