--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="header-actions">
             <a href="get-help.html" class="cta-link">GET HELP</a>
             <a href="shop.html" class="cta-secondary">SHOP</a>
-            <a href="donate.html" class="cta-primary">DONATE</a>
+            <a href="get-involved.html" class="cta-primary">DONATE</a>
         </div>
     </header>
 
@@ -31,7 +31,7 @@
                 <h1>Stronger Roots. Stronger Families. Stronger Future.</h1>
                 <p>We are breaking the cycle of single motherhood in Uganda through education, male engagement, and economic empowerment.</p>
                 <div class="hero-buttons">
-                    <a href="donate.html" class="cta-primary">DONATE NOW</a>
+                    <a href="get-involved.html#donate" class="cta-primary">DONATE NOW</a>
                     <a href="about.html" class="cta-secondary">LEARN MORE</a>
                 </div>
             </div>
@@ -115,17 +115,17 @@
                 <div class="cta-option">
                     <h3>Fund a Startup Kit</h3>
                     <p>A 150,000 UGX gift provides a sewing machine, fabrics, and business training to launch a MomPreneur's tailoring business.</p>
-                    <a href="donate.html" class="cta-secondary">GIVE A KIT</a>
+                    <a href="get-involved.html#donate" class="cta-secondary">GIVE A KIT</a>
                 </div>
                 <div class="cta-option">
                     <h3>Sponsor a Workshop</h3>
                     <p>For 50,000 UGX, provide a full day of "Men Matter" or "Smart Choices" training, empowering young people with essential life skills.</p>
-                    <a href="donate.html" class="cta-secondary">SPONSOR A YOUTH</a>
+                    <a href="get-involved.html#donate" class="cta-secondary">SPONSOR A YOUTH</a>
                 </div>
                 <div class="cta-option">
                     <h3>Give Any Amount</h3>
                     <p>Your gift will go where it's needed most to support our hubs and staff.</p>
-                    <a href="donate.html" class="cta-primary">DONATE NOW</a>
+                    <a href="get-involved.html#donate" class="cta-primary">DONATE NOW</a>
                 </div>
             </div>
         </section>
@@ -152,7 +152,7 @@
                     <p>Help us capture and share the powerful stories of transformation.</p>
                 </div>
             </div>
-            <a href="contact.html" class="cta-secondary">FILL OUT OUR VOLUNTEER FORM</a>
+            <a href="get-involved.html#volunteer" class="cta-secondary">BECOME A VOLUNTEER</a>
         </section>
     </main>
 
