--- a/men-matter.html
+++ b/men-matter.html
@@ -20,24 +20,46 @@
         <div class="header-actions">
             <a href="get-help.html" class="cta-link">GET HELP</a>
             <a href="shop.html" class="cta-secondary">SHOP</a>
-            <a href="donate.html" class="cta-primary">DONATE</a>
+            <a href="get-involved.html" class="cta-primary">DONATE</a>
         </div>
     </header>
 
     <main>
-        <section class="content-section">
-            <h2>👨 Men Matter: Redefining Responsible Fatherhood</h2>
-            <p>We believe that for families to be strong, men must be engaged. The "absent father" is not the problem, but a symptom. Our 'Men Matter' labs are safe, powerful workshops for young men (15-30) to discuss and redefine masculinity. We tackle financial planning, co-parenting, communication, and the legal/emotional responsibilities of fatherhood. We are building a generation of men who are proud to be present, responsible partners and fathers.</p>
-            
-            <h3>Key Topics:</h3>
-            <ul class="key-topics-list">
-                <li>Responsible Masculinity vs. Toxic Masculinity</li>
-                <li>Financial Planning for a Family</li>
-                <li>Co-Parenting & Communication Skills</li>
-                <li>Legal Rights & Responsibilities of a Father</li>
-            </ul>
+        <!-- Hero Section -->
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1>👨 Men Matter</h1>
+                <p>Building a generation of men who are proud to be present, responsible partners and fathers.</p>
+            </div>
+        </section>
 
-            <p>Want to join a Men Matter Lab? <a href="contact.html" class="cta-secondary">See the next workshop schedule</a>. Studies show that engaged fathers significantly improve family stability and child well-being.</p>
+        <section class="content-section">
+            <h2>Redefining Responsible Fatherhood</h2>
+            <p>We believe that for families to be strong, men must be engaged. The "absent father" is not the problem, but a symptom. Our 'Men Matter' labs are safe, powerful workshops for young men (15-30) to discuss and redefine masculinity. We tackle financial planning, co-parenting, communication, and the legal/emotional responsibilities of fatherhood. We are building a generation of men who are proud to be present, responsible partners and fathers.</p>
+        </section>
+
+        <section class="content-section">
+            <h3>Core Workshop Themes</h3>
+            <div class="pillars-grid">
+                <div class="pillar">
+                    <h4>Responsible Masculinity</h4>
+                    <p>Exploring positive identity and rejecting harmful stereotypes.</p>
+                </div>
+                <div class="pillar">
+                    <h4>Family Financial Planning</h4>
+                    <p>Practical skills for budgeting and providing for a family.</p>
+                </div>
+                <div class="pillar">
+                    <h4>Co-Parenting & Communication</h4>
+                    <p>Learning to be an effective partner and engaged father.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="content-section cta-section">
+            <h2>Join a Men Matter Lab</h2>
+            <p>Want to join a workshop or bring one to your community? Engaged fathers significantly improve family stability and child well-being.</p>
+            <a href="contact.html" class="cta-primary">SEE WORKSHOP SCHEDULE</a>
         </section>
     </main>
 
