--- a/mompreneur-academy.html
+++ b/mompreneur-academy.html
@@ -20,28 +20,46 @@
         <div class="header-actions">
             <a href="get-help.html" class="cta-link">GET HELP</a>
             <a href="shop.html" class="cta-secondary">SHOP</a>
-            <a href="donate.html" class="cta-primary">DONATE</a>
+            <a href="get-involved.html" class="cta-primary">DONATE</a>
         </div>
     </header>
 
     <main>
-        <section class="content-section">
-            <h2>👩‍💼 MomPreneur Academy: From Dependency to Dignity</h2>
-            <p>This is our economic empowerment engine. The MomPreneur Academy is an intensive training program for single mothers, unemployed graduates, and at-risk young women. We don't just teach a skill; we build a business. Participants learn entrepreneurship, business management, financial literacy, digital skills (like graphic design), and practical vocations (like tailoring and crafts).</p>
-            
-            <h3>How it Works:</h3>
-            <ul class="key-topics-list">
-                <li><strong>Train:</strong> 12 weeks of intensive skills and business training.</li>
-                <li><strong>Launch:</strong> Graduates receive a 'Roots Made' startup kit (e.g., a sewing machine, laptop, or initial materials).</li>
-                <li><strong>Sell:</strong> We provide a path to market through our 'Roots Made' online shop and partner markets.</li>
-            </ul>
-
-            <div class="testimonial-box">
-                <img src="https://via.placeholder.com/100x100.png?text=Grace" alt="Grace, MomPreneur Graduate">
-                <p>"The Academy didn't just give me a skill, it gave me a future. I can now pay for my child's school fees and I am proud of the business I built." – Grace, MomPreneur Graduate</p>
+        <!-- Hero Section -->
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1>👩‍💼 MomPreneur Academy</h1>
+                <p>Transforming economic dependency into dignified, sustainable enterprise for mothers.</p>
             </div>
+        </section>
 
-            <a href="donate.html" class="cta-primary">Fund a Startup Kit for 150,000 UGX</a>
+        <section class="content-section">
+            <h2>From Dependency to Dignity</h2>
+            <p>This is our economic empowerment engine. The MomPreneur Academy is an intensive training program for single mothers, unemployed graduates, and at-risk young women. We don't just teach a skill; we build a business. Participants learn entrepreneurship, business management, financial literacy, digital skills (like graphic design), and practical vocations (like tailoring and crafts).</p>
+        </section>
+
+        <section class="content-section">
+            <h3>Our 3-Step Process</h3>
+            <div class="pillars-grid">
+                <div class="pillar">
+                    <h4>1. Train</h4>
+                    <p>12 weeks of intensive skills training in business, finance, and a chosen vocation.</p>
+                </div>
+                <div class="pillar">
+                    <h4>2. Launch</h4>
+                    <p>Graduates receive a 'Roots Made' startup kit (e.g., a sewing machine or laptop).</p>
+                </div>
+                <div class="pillar">
+                    <h4>3. Sell</h4>
+                    <p>We provide a path to market through our 'Roots Made' online shop and partners.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="content-section cta-section">
+            <h2>Fund a Future</h2>
+            <p>"The Academy didn't just give me a skill, it gave me a future. I can now pay for my child's school fees and I am proud of the business I built." – Grace, Graduate</p>
+            <a href="get-involved.html#donate" class="cta-primary">FUND A STARTUP KIT FOR 150,000 UGX</a>
         </section>
     </main>
 
