--- a/programs.html
+++ b/programs.html
@@ -20,14 +20,17 @@
         <div class="header-actions">
             <a href="get-help.html" class="cta-link">GET HELP</a>
             <a href="shop.html" class="cta-secondary">SHOP</a>
-            <a href="donate.html" class="cta-primary">DONATE</a>
+            <a href="get-involved.html" class="cta-primary">DONATE</a>
         </div>
     </header>
 
     <main>
-        <section class="content-section">
-            <h2>Our 4-Pillar Model</h2>
-            <p>Our solution is holistic. We don't just address one piece of the puzzle—we work to strengthen the entire foundation of a young person's life, from prevention to intervention to empowerment. Explore our four integrated programs.</p>
+        <!-- Hero Section -->
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1>Our 4-Pillar Model</h1>
+                <p>Our solution is holistic. We strengthen the entire foundation of a young person's life, from prevention to intervention to empowerment.</p>
+            </div>
         </section>
 
         <section class="program-grid-container">
