--- a/smart-choices.html
+++ b/smart-choices.html
@@ -20,24 +20,50 @@
         <div class="header-actions">
             <a href="get-help.html" class="cta-link">GET HELP</a>
             <a href="shop.html" class="cta-secondary">SHOP</a>
-            <a href="donate.html" class="cta-primary">DONATE</a>
+            <a href="get-involved.html" class="cta-primary">DONATE</a>
         </div>
     </header>
 
     <main>
-        <section class="content-section">
-            <h2>📘 Smart Choices: Education for Prevention</h2>
-            <p>The best time to break a cycle is before it begins. Our 'Smart Choices' curriculum is a values-based, age-appropriate program for youth aged 12-24. We partner with schools and community centers to deliver engaging workshops on sexual/reproductive health, consent, peer pressure, healthy relationships, and financial goal-setting. We are raising a generation of informed, responsible decision-makers.</p>
-            
-            <h3>Key Topics:</h3>
-            <ul class="key-topics-list">
-                <li>Consent, Communication & Boundaries</li>
-                <li>Age-Appropriate Sexual & Reproductive Health</li>
-                <li>Financial Literacy & Goal Setting</li>
-                <li>Emotional Intelligence & Self-Respect</li>
-            </ul>
+        <!-- Hero Section -->
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1>📘 Smart Choices</h1>
+                <p>Raising a generation of informed, responsible decision-makers through values-based education.</p>
+            </div>
+        </section>
 
-            <p>Are you a school or community leader? <a href="contact.html" class="cta-secondary">Partner with us</a> to bring 'Smart Choices' to your youth. Together, we can empower young people to make informed decisions and build brighter futures.</p>
+        <section class="content-section">
+            <h2>Education for Prevention</h2>
+            <p>The best time to break a cycle is before it begins. Our 'Smart Choices' curriculum is a values-based, age-appropriate program for youth aged 12-24. We partner with schools and community centers to deliver engaging workshops on sexual/reproductive health, consent, peer pressure, healthy relationships, and financial goal-setting. We are raising a generation of informed, responsible decision-makers.</p>
+        </section>
+
+        <section class="content-section">
+            <h3>What We Teach</h3>
+            <div class="pillars-grid">
+                <div class="pillar">
+                    <h4>Consent & Boundaries</h4>
+                    <p>Understanding and respecting personal boundaries in all relationships.</p>
+                </div>
+                <div class="pillar">
+                    <h4>Health & Wellness</h4>
+                    <p>Age-appropriate sexual and reproductive health education.</p>
+                </div>
+                <div class="pillar">
+                    <h4>Financial Literacy</h4>
+                    <p>Setting financial goals and learning the basics of money management.</p>
+                </div>
+                <div class="pillar">
+                    <h4>Emotional Intelligence</h4>
+                    <p>Developing self-respect, empathy, and healthy communication skills.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="content-section cta-section">
+            <h2>Bring 'Smart Choices' to Your Community</h2>
+            <p>Are you a school or community leader? Partner with us to bring this vital curriculum to your youth. Together, we can empower young people to make informed decisions and build brighter futures.</p>
+            <a href="contact.html" class="cta-primary">PARTNER WITH US</a>
         </section>
     </main>
 
