--- a/about.html
+++ b/about.html
@@ -20,13 +20,21 @@
         <div class="header-actions">
             <a href="get-help.html" class="cta-link">GET HELP</a>
             <a href="shop.html" class="cta-secondary">SHOP</a>
-            <a href="donate.html" class="cta-primary">DONATE</a>
+            <a href="get-involved.html" class="cta-primary">DONATE</a>
         </div>
     </header>
 
     <main>
+        <!-- Hero Section -->
+        <section class="hero-section">
+            <div class="hero-content">
+                <h1>Our Story: From Urgent Need to Lasting Solution</h1>
+                <p>We are a dedicated team of Ugandan social workers, entrepreneurs, and community leaders who believe in the potential of our youth and the resilience of our mothers.</p>
+            </div>
+        </section>
+
         <section class="content-section">
-            <h2>Our Story: From an Urgent Need to a Lasting Solution</h2>
+            <h2>Our Mission & Vision</h2>
             <img src="https://via.placeholder.com/900x400.png?text=Group+photo+of+program+participants" alt="Roots of Responsibility Team" class="about-hero-image">
 
             <div class="mission-vision-container">
@@ -54,7 +62,6 @@
 
         <section class="content-section">
             <h2>Our Team</h2>
-            <p>We are a dedicated team of Ugandan social workers, entrepreneurs, trainers, and community leaders. We believe in the potential of our youth and the resilience of our mothers.</p>
             <div class="team-grid">
                 <div class="team-member">
                     <img src="https://via.placeholder.com/200x200.png?text=Founder" alt="Founder/Director">
