--- a/shop.html
+++ b/shop.html
@@ -19,7 +19,7 @@
         <div class="header-actions">
             <a href="get-help.html" class="cta-link">GET HELP</a>
             <a href="shop.html" class="cta-secondary">SHOP</a>
-            <a href="donate.html" class="cta-primary">DONATE</a>
+            <a href="get-involved.html" class="cta-primary">DONATE</a>
         </div>
     </header>
 
