--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <p>For all general inquiries, media requests, or questions not covered on our 'Get Involved' page, please use the form below or email us.</p>
             <p><em>(Note: If you are looking for help, please use our confidential <a href="get-help.html">Get Help</a> page instead.)</em></p>
 
-            <form class="secure-form" style="margin-top: 2rem;">
+            <form action="https://formspree.io/f/myzaqadb" method="POST" class="secure-form" style="margin-top: 2rem;">
                 <label for="contact-name">Your Name:</label>
                 <input type="text" id="contact-name" name="name">
 
