--- a/get-help.html
+++ b/get-help.html
@@ -61,7 +61,7 @@
                 <div class="contact-method">
                     <h4>2. Fill Out a Private Form</h4>
                     <p>This form is secure. We will reply to you privately.</p>
-                    <form class="secure-form">
+                    <form action="https://formspree.io/f/myzaqadb" method="POST" class="secure-form">
                         <label for="name">Your Name (or nickname):</label>
                         <input type="text" id="name" name="name">
 
