--- a/get-involved.html
+++ b/get-involved.html
@@ -123,7 +123,9 @@
                     <li><strong>Photographers/Videographers:</strong> (To help tell our story)</li>
                 </ul>
                 
-                <form action="https://formspree.io/f/myzaqadb" method="POST" class="volunteer-form">
+                <button type="button" id="show-volunteer-form" class="cta-secondary">SIGN UP TO VOLUNTEER</button>
+                
+                <form action="https://formspree.io/f/myzaqadb" method="POST" class="volunteer-form" id="volunteer-form" style="display: none;">
                     <!-- Personal Information -->
                     <div class="form-section">
                         <h4>Personal Information</h4>
