new changes in style

--- a/get-involved.html
+++ b/get-involved.html
@@ -371,5 +371,7 @@
             <p>A registered NGO in Uganda.</p>
         </div>
     </footer>
+
+    <script src="main.js"></script>
 </body>
 </html>
